# vetcheck

./: .gitignore  AUDIT_v0.1.0.md  CHANGELOG.md  README.md  pyproject.toml
src/vetcheck/: __init__.py  drift.py  exam.py  quarantine.py
tests/: test_vetcheck.py
